@@ -150,6 +150,7 @@ Video ouput:
  * EFL Evas video output with Tizen TBM Surface support
  * New OpenGL provider for Windows
  * Drop OpenGL 1.x and OpenGL ES 1 support
+ * Direct rendering with OpenGL (starting OpenGL 4.4)
 
 Text renderer:
  * CTL support through Harfbuzz in the Freetype module
